Add command permissions and welcomer